<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <TextView
        android:id="@+id/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:text="@string/WelcomeHeader"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/travelType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:entries="@array/travelType_array"
        android:prompt="@string/lbltravelType" />

    <TextView
        android:id="@+id/lblTravelType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/travelType"
        android:layout_alignLeft="@+id/travelType"
        android:text="@string/lbltravelType"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/bringmehomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/travelType"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/btn_bringMeHome" />

    <Button
        android:id="@+id/setupButton"
        style="android:buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblTravelType"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/btn_configuration" />

</RelativeLayout>