<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" >
	<RelativeLayout 
	    
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_gravity="top|center"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".Configuration" >
	
		    <TextView
		        android:id="@+id/config_Header"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="10dp"
		        android:text="@string/config_Header"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TextView
		        android:id="@+id/lblStreet"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/config_Header"
		        android:layout_marginLeft="22dp"
		        android:layout_marginTop="10dp"
		        android:text="@string/config_Street"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/txtStreet"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/lblStreet"
		        android:layout_below="@+id/lblStreet"
		        android:ems="10"
		        android:inputType="text" />
		
				<requestFocus />
				
		    <EditText
		        android:id="@+id/txtHouseNumber"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/lblNumber"
		        android:layout_below="@+id/lblNumber"
		        android:ems="10"
		        android:inputType="text" >
		
		    </EditText>
		
		    <EditText
		        android:id="@+id/txtPostalCode"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/lblPostalCode"
		        android:layout_below="@+id/lblPostalCode"
		        android:ems="10"
		        android:inputType="text" />
		
		    <TextView
		        android:id="@+id/lblPostalCode"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/txtHouseNumber"
		        android:layout_below="@+id/txtHouseNumber"
		        android:text="@string/config_PostalCode"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TextView
		        android:id="@+id/lblNumber"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/txtStreet"
		        android:layout_below="@+id/txtStreet"
		        android:text="@string/config_HouseNumber"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TextView
		        android:id="@+id/lblCountry"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/txtCountry"
		        android:layout_below="@+id/txtCity"
		        android:text="@string/config_Country"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TextView
		        android:id="@+id/lblCity"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/txtPostalCode"
		        android:layout_below="@+id/txtPostalCode"
		        android:text="@string/config_City"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/txtCity"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/lblCity"
		        android:layout_below="@+id/lblCity"
		        android:ems="10"
		        android:inputType="text" />
		
		    <EditText
		        android:id="@+id/txtCountry"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/txtCity"
		        android:layout_below="@+id/lblCountry"
		        android:ems="10"
		        android:inputType="text" />
		
		    <Button
		        android:id="@+id/saveconfig"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/txtCountry"
		        android:layout_centerHorizontal="true"
		        android:text="@string/btn_save" />
		
	</RelativeLayout>
</ScrollView>
